--- a/docs/.vuepress/styles/config.scss
+++ b/docs/.vuepress/styles/config.scss
@@ -1,2 +1,4 @@
 // you can change config here
 $code-lang: "css" "html" "js" "ts" "vue";
+$code-light-theme: coldark-cold;
+$code-dark-theme: material-oceanic
